RESOLVED FIXED 127904
Fix compilation on ARM traditional after jsCStack branch merge
https://bugs.webkit.org/show_bug.cgi?id=127904
Summary Fix compilation on ARM traditional after jsCStack branch merge
Pascal Jacquemart
Reported 2014-01-30 03:52:18 PST
Speculative / untested patch to fix compilation for ARM traditional
Attachments
Speculative fix compilation for ARM traditional (1.30 KB, patch)
2014-01-30 03:58 PST, Pascal Jacquemart
no flags
Add missing pushPair/popPair implementations in macro assembler for traditional ARM. (1.54 KB, patch)
2014-01-31 06:12 PST, Julien Brianceau
no flags
Pascal Jacquemart
Comment 1 2014-01-30 03:58:09 PST
Created attachment 222658 [details] Speculative fix compilation for ARM traditional
Csaba Osztrogonác
Comment 2 2014-01-30 04:34:36 PST
*** Bug 127856 has been marked as a duplicate of this bug. ***
Pascal Jacquemart
Comment 3 2014-01-31 03:38:30 PST
I tried to run on board but the build is crashing In the meantime, it also crashed while disabling JIT at runtime so I might have another issue here ;-(
Julien Brianceau
Comment 4 2014-01-31 06:12:54 PST
Created attachment 222810 [details] Add missing pushPair/popPair implementations in macro assembler for traditional ARM. This one should work better :)
Zoltan Herczeg
Comment 5 2014-01-31 06:30:46 PST
Comment on attachment 222810 [details] Add missing pushPair/popPair implementations in macro assembler for traditional ARM. r=me
WebKit Commit Bot
Comment 6 2014-01-31 07:06:24 PST
Comment on attachment 222810 [details] Add missing pushPair/popPair implementations in macro assembler for traditional ARM. Clearing flags on attachment: 222810 Committed r163169: <http://trac.webkit.org/changeset/163169>
WebKit Commit Bot
Comment 7 2014-01-31 07:06:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.